...
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/message_swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/message_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            tools:listitem="@layout/generic_message_list_item"
            android:divider="?attr/messageListSeparatorColor"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_button_compose_message"
        style="@style/PlanckFabButton.ComposeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:clickable="true"
        app:srcCompat="@drawable/ic_compose_message_24dp"
...
