...
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/message_compose_recipients" />

                <com.fsck.k9.ui.ImageRefusingEditText
                    android:id="@+id/subject"
                    style="@style/ComposeTextLarge"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/min_height"
                    android:layout_marginLeft="@dimen/outer_margin"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="@dimen/outer_margin"
...
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <!-- We have to use "wrap_content" (not "0dp") for "layout_height", otherwise the
                     EditText won't properly grow in height while the user is typing the message -->
                <com.fsck.k9.ui.ImageRefusingEditText
                    android:id="@+id/message_content"
                    style="@style/ComposeEditTextLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/outer_margin"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="@dimen/outer_margin"
...
