...
            android:layout_width="wrap_content"
            android:layout_height="@dimen/min_height"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:labelFor="@+id/to"
            android:minWidth="@dimen/min_label_width"
            android:text="@string/recipient_to" />

        <com.fsck.k9.planck.ui.ActionRecipientSelectView
            android:id="@+id/to"
            style="@style/MediumComposeText"
...
