<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:background="?attr/screenDefaultBackgroundColor">

    <com.fsck.k9.planck.ui.PlanckContactBadge
        android:id="@+id/status_badge"
        style="?android:attr/quickContactBadgeStyleWindowLarge"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_gravity="center_vertical"
        android:paddingBottom="3dip"
        android:paddingStart="4dp"
        android:paddingEnd="8dip"
        android:paddingTop="4dip"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_contact_picture" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="4dp">

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="User name" />

        <TextView
            android:id="@+id/tvRatingStatus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:text="Secure" />

    </LinearLayout>

</LinearLayout>